--- a/README
+++ b/README
@@ -61,3 +61,11 @@ The sample size is set with ``-n``, and typical rules of thumb say
 that this should be at least 20 for the confidence level to be valid.
 The page size is set with ``-p`` and should be something like
 2048, 4096, 8192, or 16384.
+
+Matching things other than newline
+-----------------------------------
+You can count occurrences of a string other than newline; specify
+the string with ``-e``. It will be interpreted as a regular expression
+if you pass ``-r``. The statistical estimates do not account for the
+variable length of regular expression matches, so you are better off
+using plain strings if you care about accuracy.
