--- a/README
+++ b/README
@@ -2,9 +2,9 @@ lcw: Estimate the number of lines in a file.
 ==============================================
 lcw is like ``wc -l`` but faster, less precise, and equally accurate. ::
 
-    usage: lcw [-h] [--sample-size N] [--page-size PAGE_SIZE] [--just-ml]
-               [--pattern PATTERN] [--regex]
-               file
+    usage: lcw [-h] [--sample-size N] [--page-size PAGE_SIZE] [--pattern PATTERN]
+               [--regex]
+               file [file ...]
 
     Estimate how many lines are in a file.
 
@@ -17,8 +17,6 @@ lcw is like ``wc -l`` but faster, less precise, and equally accurate. ::
                             How many pages to count (default: 1000)
       --page-size PAGE_SIZE, -p PAGE_SIZE
                             Size of an observation (default: 16384)
-      --just-ml, -j         Only print the maximum likelihood estimate (default:
-                            False)
       --pattern PATTERN, -e PATTERN
                             The pattern to match (default: b'\n')
       --regex, -r           Use regular expressions (statistically unsound)
